--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>Chomp Restaurant</title>
   </head>
   <body>
-    <div class="bg-blue-400 text-white flex justify-center py-2">
+    <div class="bg-blue-400 text-white flex justify-center py-4">
       <div class="text-center flex">
         <p>We're open and available for takeaway & delivery.</p>
         <a href="/order" class="text-white pl-2">Order Now</a>
       </div>
     </div>
     <nav
-      class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-800"
+      class="max-w-7xl mx-auto bg-white border-gray-200 px-2 sm:px-4 py-8 rounded dark:bg-gray-800"
     >
       <div
         class="container flex flex-wrap justify-between items-center mx-auto"
@@ -75,21 +75,21 @@
               <a
                 href="#"
                 class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-                >About</a
+                >Order</a
               >
             </li>
             <li>
               <a
                 href="#"
                 class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-                >Services</a
+                >Company</a
               >
             </li>
             <li>
               <a
                 href="#"
                 class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-                >Pricing</a
+                >FAQ</a
               >
             </li>
             <li>
@@ -104,49 +104,51 @@
       </div>
     </nav>
     <!-- HERO -->
-    <section class="max-w-xl mx-auto">
-      <div>
-
-        <div class="flex flex-col pt-36">
-          <h1 class="text-6xl text-center font-bold pb-10">
-            Beautiful food & takeaway,
-            <span class="text-teal-400">delivered</span> to your door.
-          </h1>
-          <p class="text-lg text-center text-slate-500">
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500.
-          </p>
-        </div>
-
-        <div class="flex justify-center mt-12">
-          <button class="bg-blue-400 px-8 py-4 text-lg text-white rounded-md">
-            Place an Order
-          </button>
-        </div>
-        
-        <div class="flex flex-col justify-items-center mt-12 text-center">
-          <img
-            src="https://assets.website-files.com/5e865e09d8efa3310676b585/5e865e09d8efa3a3f976b5c3_trustpilot-logo.svg"
-            alt="Trustpilot"
-            class="w-30 mx-auto pb-2"
-          />
-          <p>
-            <span class="text-blue-400">4.8 out of 5</span> based on 2000+
-            reviews
-          </p>
-        </div>
+    <section class="max-w-6xl mx-auto md:block md:text-center text-center sm:block lg:flex lg:text-left xl:flex xl:text-left items-center">
+        <!-- TEXT DIV -->
+        <div>
+      <div class="flex flex-col pt-10 md:pt-24 lg:pt-36 xl:pt-36">
+        <h1 class="text-5xl md:text-6xl lg:text-6xl xl:text-6xl font-bold pb-10">
+          Beautiful food & takeaway,
+          <span class="text-teal-400">delivered</span> to your door.
+        </h1>
+        <p class="text-lg text-slate-500">
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's standard dummy text ever
+          since the 1500.
+        </p>
       </div>
+
+      <div class="flex mt-12">
+        <button class="bg-blue-400 px-8 py-4 text-lg text-white rounded-md mx-auto md:mx-auto lg:mx-0 xl:mx-0">
+          Place an Order
+        </button>
+      </div>
+
+      <div class="flex flex-col mt-12">
+        <img
+          src="https://assets.website-files.com/5e865e09d8efa3310676b585/5e865e09d8efa3a3f976b5c3_trustpilot-logo.svg"
+          alt="Trustpilot"
+          class="w-32 pb-2 mx-auto md:mx-auto lg:mx-0 xl:mx-0"
+        />
+        <p>
+          <span class="text-blue-400">4.8 out of 5</span> based on 2000+ reviews
+        </p>
+      </div>
+
+      </div>
+      <!-- END TEXT DIV -->
 
       <div>
         <div class="flex flex-col justify-items-center mt-12 text-center">
           <img
             src="https://assets.website-files.com/5e865e09d8efa3310676b585/5e865e09d8efa395f376b5c1_Hero%20Image.png"
-            alt="Trustpilot"
-            class="mx-auto pb-2"
+            alt="food img"
+            class="max-w-xl mx-auto pb-2 w-96 md:w-auto lg:w-auto xl:w-auto"
           />
         </div>
       </div>
+
     </section>
   </body>
 </html>
