--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="bg-blue-400 text-white flex justify-center py-4">
       <div class="text-center flex">
         <p>We're open and available for takeaway & delivery.</p>
-        <a href="/order" class="text-white pl-2">Order Now</a>
+        <a href="/order" class="text-white pl-2 underline underline-offset-2">Order Now</a>
       </div>
     </div>
     <nav
@@ -104,38 +104,44 @@
       </div>
     </nav>
     <!-- HERO -->
-    <section class="max-w-6xl mx-auto md:block md:text-center text-center sm:block lg:flex lg:text-left xl:flex xl:text-left items-center">
-        <!-- TEXT DIV -->
-        <div>
-      <div class="flex flex-col pt-10 md:pt-24 lg:pt-36 xl:pt-36">
-        <h1 class="text-5xl md:text-6xl lg:text-6xl xl:text-6xl font-bold pb-10">
-          Beautiful food & takeaway,
-          <span class="text-teal-400">delivered</span> to your door.
-        </h1>
-        <p class="text-lg text-slate-500">
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500.
-        </p>
-      </div>
+    <section
+      class="mb-24 px-24 lg:px-0 xl:px-0 max-w-6xl mx-auto md:block md:text-center text-center sm:block lg:flex lg:text-left xl:flex xl:text-left items-center"
+    >
+      <!-- TEXT DIV -->
+      <div>
+        <div class="flex flex-col pt-10 md:pt-24 lg:pt-36 xl:pt-36">
+          <h1
+            class="text-5xl md:text-6xl lg:text-6xl xl:text-6xl font-bold pb-10"
+          >
+            Beautiful food & takeaway,
+            <span class="text-teal-400">delivered</span> to your door.
+          </h1>
+          <p class="text-lg text-slate-500">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500.
+          </p>
+        </div>
 
-      <div class="flex mt-12">
-        <button class="bg-blue-400 px-8 py-4 text-lg text-white rounded-md mx-auto md:mx-auto lg:mx-0 xl:mx-0">
-          Place an Order
-        </button>
-      </div>
+        <div class="flex mt-12">
+          <button
+            class="bg-blue-400 px-8 py-4 text-lg text-white rounded-md mx-auto md:mx-auto lg:mx-0 xl:mx-0"
+          >
+            Place an Order
+          </button>
+        </div>
 
-      <div class="flex flex-col mt-12">
-        <img
-          src="https://assets.website-files.com/5e865e09d8efa3310676b585/5e865e09d8efa3a3f976b5c3_trustpilot-logo.svg"
-          alt="Trustpilot"
-          class="w-32 pb-2 mx-auto md:mx-auto lg:mx-0 xl:mx-0"
-        />
-        <p>
-          <span class="text-blue-400">4.8 out of 5</span> based on 2000+ reviews
-        </p>
-      </div>
-
+        <div class="flex flex-col mt-12">
+          <img
+            src="https://assets.website-files.com/5e865e09d8efa3310676b585/5e865e09d8efa3a3f976b5c3_trustpilot-logo.svg"
+            alt="Trustpilot"
+            class="w-32 pb-2 mx-auto md:mx-auto lg:mx-0 xl:mx-0"
+          />
+          <p>
+            <span class="text-blue-400">4.8 out of 5</span> based on 2000+
+            reviews
+          </p>
+        </div>
       </div>
       <!-- END TEXT DIV -->
 
@@ -148,7 +154,48 @@
           />
         </div>
       </div>
+    </section>
 
+    <!-- Section 1 Blue BG-->
+    <section
+      class="container-fluid bg-blue-50"
+    >
+      <div class="max-w-6xl my-24 px-48 lg:px-0 xl:px-0 py-16  mx-auto md:block md:text-center text-center sm:block lg:flex lg:text-left xl:flex xl:text-left items-center">
+        <!-- TEXT DIV -->
+        <div>
+          <div class="flex flex-col pt-10 md:pt-24 lg:pt-36 xl:pt-36">
+            <h1
+              class="text-5xl md:text-6xl lg:text-6xl xl:text-6xl font-bold pb-10 text-teal-400"
+            >
+              The home of fresh products
+            </h1>
+            <p class="text-lg text-slate-500">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500.
+            </p>
+          </div>
+
+          <div class="flex mt-12">
+            <button
+              class="bg-blue-400 px-8 py-4 text-lg text-white rounded-md mx-auto md:mx-auto lg:mx-0 xl:mx-0"
+            >
+              Learn about us
+            </button>
+          </div>
+        </div>
+        <!-- END TEXT DIV -->
+
+        <div>
+          <div class="flex flex-col justify-items-center mt-20 text-center">
+            <img
+              src="https://assets.website-files.com/5e865e09d8efa3310676b585/5e865e09d8efa3ccac76b5c6_Group%2033.png"
+              alt="section 1 img"
+              class="max-w-xl mx-auto pb-2 w-96 md:w-auto lg:w-auto xl:w-auto"
+            />
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
