--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@
     <section
       class="mb-24 px-24 lg:px-0 xl:px-0 max-w-6xl mx-auto md:text-center text-center items-center"
     >
-      <div class="flex flex-col justify-center mx-auto md:pt-10 lg:pt-16 xl:pt-16 text-center">
+      <div
+        class="flex flex-col justify-center mx-auto md:pt-10 lg:pt-16 xl:pt-16 text-center"
+      >
         <h1
           class="text-teal-400 text-5xl md:text-6xl lg:text-6xl xl:text-6xl font-bold pb-10"
         >
@@ -243,114 +245,346 @@
           </div>
           <!-- END TEXT DIV -->
         </div>
-         <!-- Flex Component End -->
+        <!-- Flex Component End -->
 
-         <!-- Flex Component -->
+        <!-- Flex Component -->
         <div class="w-1/2 lg:w-1/3 xl:w-1/3 mx-auto px-6 py-2">
-            <!-- IMG DIV -->
-            <div>
-              <div class="flex flex-col justify-items-center mt-12">
-                <img
-                  src="https://assets.website-files.com/5e865e09d8efa3310676b585/5e865e09d8efa3001a76b610_Step%2003.png"
-                  alt="food img"
-                  class="max-w-l mx-auto md:w-auto lg:w-auto xl:w-auto"
-                />
-              </div>
+          <!-- IMG DIV -->
+          <div>
+            <div class="flex flex-col justify-items-center mt-12">
+              <img
+                src="https://assets.website-files.com/5e865e09d8efa3310676b585/5e865e09d8efa3001a76b610_Step%2003.png"
+                alt="food img"
+                class="max-w-l mx-auto md:w-auto lg:w-auto xl:w-auto"
+              />
             </div>
-  
-            <!-- TEXT DIV -->
-            <div>
-              <div class="flex flex-col pt-10">
-                <h2
-                  class="text-xl md:text-2xl lg:text-3xl xl:text-3xl font-bold pb-4"
-                >
-                  Accept online orders & takeout
-                </h2>
-                <p class="text-lg text-slate-500">
-                  Let your customers order and pay via the powerful ecommerce system, or simple let them call your store.
-                </p>
-              </div>
-            </div>
-            <!-- END TEXT DIV -->
           </div>
-           <!-- Flex Component End -->
 
-           <!-- Flex Component -->
+          <!-- TEXT DIV -->
+          <div>
+            <div class="flex flex-col pt-10">
+              <h2
+                class="text-xl md:text-2xl lg:text-3xl xl:text-3xl font-bold pb-4"
+              >
+                Accept online orders & takeout
+              </h2>
+              <p class="text-lg text-slate-500">
+                Let your customers order and pay via the powerful ecommerce
+                system, or simple let them call your store.
+              </p>
+            </div>
+          </div>
+          <!-- END TEXT DIV -->
+        </div>
+        <!-- Flex Component End -->
+
+        <!-- Flex Component -->
         <div class="w-1/2 lg:w-1/3 xl:w-1/3 mx-auto px-6 py-2">
-            <!-- IMG DIV -->
-            <div>
-              <div class="flex flex-col justify-items-center mt-12">
-                <img
-                  src="https://assets.website-files.com/5e865e09d8efa3310676b585/5e865e09d8efa3e5bf76b60e_Step%2002.png"
-                  alt="food img"
-                  class="max-w-l mx-auto md:w-auto lg:w-auto xl:w-auto"
-                />
-              </div>
+          <!-- IMG DIV -->
+          <div>
+            <div class="flex flex-col justify-items-center mt-12">
+              <img
+                src="https://assets.website-files.com/5e865e09d8efa3310676b585/5e865e09d8efa3e5bf76b60e_Step%2002.png"
+                alt="food img"
+                class="max-w-l mx-auto md:w-auto lg:w-auto xl:w-auto"
+              />
             </div>
-  
-            <!-- TEXT DIV -->
-            <div>
-              <div class="flex flex-col pt-10">
-                <h2
-                  class="text-xl md:text-2xl lg:text-3xl xl:text-3xl font-bold pb-4"
-                >
-                  Manage delivery or takeout
-                </h2>
-                <p class="text-lg text-slate-500">
-                  Manage your own logistics and take orders simply through the ecommerce system.
-                </p>
-              </div>
-            </div>
-            <!-- END TEXT DIV -->
           </div>
-           <!-- Flex Component End -->
 
-        
+          <!-- TEXT DIV -->
+          <div>
+            <div class="flex flex-col pt-10">
+              <h2
+                class="text-xl md:text-2xl lg:text-3xl xl:text-3xl font-bold pb-4"
+              >
+                Manage delivery or takeout
+              </h2>
+              <p class="text-lg text-slate-500">
+                Manage your own logistics and take orders simply through the
+                ecommerce system.
+              </p>
+            </div>
+          </div>
+          <!-- END TEXT DIV -->
+        </div>
+        <!-- Flex Component End -->
       </div>
     </section>
 
     <!-- Section 1 Blue BG-->
     <section class="container-fluid bg-blue-50">
-        <div
-          class="max-w-6xl my-24 px-48 lg:px-0 xl:px-0 py-16 mx-auto md:block md:text-center text-center sm:block lg:flex lg:text-left xl:flex xl:text-left items-center"
-        >
-          <!-- TEXT DIV -->
-          <div>
-            <div class="flex flex-col pt-10 md:pt-24 lg:pt-36 xl:pt-36">
-              <h1
-                class="text-5xl md:text-6xl lg:text-6xl xl:text-6xl font-bold pb-10 text-teal-400"
+      <div
+        class="max-w-6xl my-24 px-24 lg:px-0 xl:px-0 py-16 mx-auto text-center items-center"
+      >
+        <!-- TEXT DIV -->
+        <div>
+          <div class="flex flex-col pt-10 md:pt-24 lg:pt-36 xl:pt-36">
+            <h1
+              class="text-5xl md:text-6xl lg:text-6xl xl:text-6xl font-bold pb-10 text-teal-400"
+            >
+              Browse our menu
+            </h1>
+            <p class="text-lg text-slate-500">
+              Use our menu to place an order online, or phone our store to place
+              a pickup order. Fast and fresh food.
+            </p>
+          </div>
+
+          <!-- BTN Options -->
+          <div class="flex mt-12 justify-center">
+            <button
+              id="burgersBtn" onclick="burgerBtnClick()"
+              class="border-2 border-blue-200 bg-blue-400 px-8 py-4 text-lg text-white rounded-md mx-2 w-36"
+            >
+              Burgers
+            </button>
+
+            <button
+              id="sidesBtn"
+              class="border-2 border-slate-200 px-8 py-4 text-lg text-blue-400 rounded-md mx-2 w-36"
+            >
+              Sides
+            </button>
+
+            <button
+            id="drinkssBtn"
+              class="border-2 border-slate-200 px-8 py-4 text-lg text-blue-400 rounded-md mx-2 w-36"
+            >
+              Drinks
+            </button>
+          </div>
+
+          <!-- BURGERS LIST -->
+          <div id="burgersList" class="hidden">
+            <!-- MENU ITEMS MAIN DIV -->
+            <div class="mt-10 max-8xl mx-auto flex flex-wrap justify-center">
+              <!-- MENU ITEM Component -->
+
+              <!-- ITEM CARD -->
+              <div
+                class="border-2 border-blue-200 rounded-lg flex items-center p-6 bg-white mb-6 lg:w-5/12 xl:w-5/12 lg:mx-2 xl:w-mx-2"
               >
-                The home of fresh products
-              </h1>
-              <p class="text-lg text-slate-500">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard dummy text
-                ever since the 1500.
-              </p>
-            </div>
-  
-            <div class="flex mt-12">
-              <button
-                class="bg-blue-400 px-8 py-4 text-lg text-white rounded-md mx-auto md:mx-auto lg:mx-0 xl:mx-0"
+                <!-- CARD IMG -->
+                <img
+                  class="w-36 rounded-lg"
+                  src="https://assets.website-files.com/5e865e09d8efa3d64d76b59d/5e865e09d8efa3676276b5cd_Burger%2003.png"
+                  alt=""
+                />
+                <!-- CARD TEXT DIV -->
+                <div class="pl-6">
+                  <!-- NAME + PRICE -->
+                  <div class="flex justify-between">
+                    <h2 class="text-2xl font-semibold">Sauce Burger</h2>
+                    <p class="text-teal-400">$ 9.20 USD</p>
+                  </div>
+                  <!-- DESCPRTION -->
+                  <div class="text-left text-slate-500 mt-2">
+                    <p>
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry.
+                    </p>
+                  </div>
+                  <!-- QUANTITY + ATC -->
+                  <div class="flex mt-4">
+                    <button
+                      class="bg-blue-400 px-6 py-3 text-md text-white rounded-md"
+                    >
+                      Add To Cart
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <!-- ITEM CARD -->
+              <div
+                class="border-2 border-blue-200 rounded-lg flex items-center p-6 bg-white mb-6 lg:w-5/12 xl:w-5/12 lg:mx-2 xl:w-mx-2"
               >
-                Learn about us
-              </button>
+                <!-- CARD IMG -->
+                <img
+                  class="w-36 rounded-lg"
+                  src="https://assets.website-files.com/5e865e09d8efa3d64d76b59d/5e865e09d8efa3b2e676b5b5_Burger%2008.png"
+                  alt=""
+                />
+                <!-- CARD TEXT DIV -->
+                <div class="pl-6">
+                  <!-- NAME + PRICE -->
+                  <div class="flex justify-between">
+                    <h2 class="text-2xl font-semibold">Sauce Burger</h2>
+                    <p class="text-teal-400">$ 9.20 USD</p>
+                  </div>
+                  <!-- DESCPRTION -->
+                  <div class="text-left text-slate-500 mt-2">
+                    <p>
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry.
+                    </p>
+                  </div>
+                  <!-- QUANTITY + ATC -->
+                  <div class="flex mt-4">
+                    <button
+                      class="bg-blue-400 px-6 py-3 text-md text-white rounded-md"
+                    >
+                      Add To Cart
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <!-- ITEM CARD -->
+              <div
+                class="border-2 border-blue-200 rounded-lg flex items-center p-6 bg-white mb-6 lg:w-5/12 xl:w-5/12 lg:mx-2 xl:w-mx-2"
+              >
+                <!-- CARD IMG -->
+                <img
+                  class="w-36 rounded-lg"
+                  src="https://assets.website-files.com/5e865e09d8efa3d64d76b59d/5e865e09d8efa36d8576b5b4_Burger%2004.png"
+                  alt=""
+                />
+                <!-- CARD TEXT DIV -->
+                <div class="pl-6">
+                  <!-- NAME + PRICE -->
+                  <div class="flex justify-between">
+                    <h2 class="text-2xl font-semibold">Sauce Burger</h2>
+                    <p class="text-teal-400">$ 9.20 USD</p>
+                  </div>
+                  <!-- DESCPRTION -->
+                  <div class="text-left text-slate-500 mt-2">
+                    <p>
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry.
+                    </p>
+                  </div>
+                  <!-- QUANTITY + ATC -->
+                  <div class="flex mt-4">
+                    <button
+                      class="bg-blue-400 px-6 py-3 text-md text-white rounded-md"
+                    >
+                      Add To Cart
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <!-- ITEM CARD -->
+              <div
+                class="border-2 border-blue-200 rounded-lg flex items-center p-6 bg-white mb-6 lg:w-5/12 xl:w-5/12 lg:mx-2 xl:w-mx-2"
+              >
+                <!-- CARD IMG -->
+                <img
+                  class="w-36 rounded-lg"
+                  src="https://assets.website-files.com/5e865e09d8efa3d64d76b59d/5e865e09d8efa3676276b5cd_Burger%2003.png"
+                  alt=""
+                />
+                <!-- CARD TEXT DIV -->
+                <div class="pl-6">
+                  <!-- NAME + PRICE -->
+                  <div class="flex justify-between">
+                    <h2 class="text-2xl font-semibold">Sauce Burger</h2>
+                    <p class="text-teal-400">$ 9.20 USD</p>
+                  </div>
+                  <!-- DESCPRTION -->
+                  <div class="text-left text-slate-500 mt-2">
+                    <p>
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry.
+                    </p>
+                  </div>
+                  <!-- QUANTITY + ATC -->
+                  <div class="flex mt-4">
+                    <button
+                      class="bg-blue-400 px-6 py-3 text-md text-white rounded-md"
+                    >
+                      Add To Cart
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <!-- ITEM CARD -->
+              <div
+                class="border-2 border-blue-200 rounded-lg flex items-center p-6 bg-white mb-6 lg:w-5/12 xl:w-5/12 lg:mx-2 xl:w-mx-2"
+              >
+                <!-- CARD IMG -->
+                <img
+                  class="w-36 rounded-lg"
+                  src="https://assets.website-files.com/5e865e09d8efa3d64d76b59d/5e865e09d8efa3b2e676b5b5_Burger%2008.png"
+                  alt=""
+                />
+                <!-- CARD TEXT DIV -->
+                <div class="pl-6">
+                  <!-- NAME + PRICE -->
+                  <div class="flex justify-between">
+                    <h2 class="text-2xl font-semibold">Sauce Burger</h2>
+                    <p class="text-teal-400">$ 9.20 USD</p>
+                  </div>
+                  <!-- DESCPRTION -->
+                  <div class="text-left text-slate-500 mt-2">
+                    <p>
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry.
+                    </p>
+                  </div>
+                  <!-- QUANTITY + ATC -->
+                  <div class="flex mt-4">
+                    <button
+                      class="bg-blue-400 px-6 py-3 text-md text-white rounded-md"
+                    >
+                      Add To Cart
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <!-- ITEM CARD -->
+              <div
+                class="border-2 border-blue-200 rounded-lg flex items-center p-6 bg-white mb-6 lg:w-5/12 xl:w-5/12 lg:mx-2 xl:w-mx-2"
+              >
+                <!-- CARD IMG -->
+                <img
+                  class="w-36 rounded-lg"
+                  src="https://assets.website-files.com/5e865e09d8efa3d64d76b59d/5e865e09d8efa36d8576b5b4_Burger%2004.png"
+                  alt=""
+                />
+                <!-- CARD TEXT DIV -->
+                <div class="pl-6">
+                  <!-- NAME + PRICE -->
+                  <div class="flex justify-between">
+                    <h2 class="text-2xl font-semibold">Sauce Burger</h2>
+                    <p class="text-teal-400">$ 9.20 USD</p>
+                  </div>
+                  <!-- DESCPRTION -->
+                  <div class="text-left text-slate-500 mt-2">
+                    <p>
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry.
+                    </p>
+                  </div>
+                  <!-- QUANTITY + ATC -->
+                  <div class="flex mt-4">
+                    <button
+                      class="bg-blue-400 px-6 py-3 text-md text-white rounded-md"
+                    >
+                      Add To Cart
+                    </button>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-          <!-- END TEXT DIV -->
-  
-          <div>
-            <div class="flex flex-col justify-items-center mt-20 text-center">
-              <img
-                src="https://assets.website-files.com/5e865e09d8efa3310676b585/5e865e09d8efa3ccac76b5c6_Group%2033.png"
-                alt="section 1 img"
-                class="max-w-xl mx-auto pb-2 w-96 md:w-auto lg:w-auto xl:w-auto"
-              />
-            </div>
+          <!-- BURGERS LIST END-->
+
+          <!-- FULL MENU BTN -->
+          <div class="flex mt-12 justify-center">
+            <button
+              class="bg-blue-400 px-8 py-4 text-lg text-white rounded-md mx-2"
+            >
+              See Full Menu
+            </button>
           </div>
         </div>
-      </section>
-
-      
+        <!-- END TEXT DIV -->
+      </div>
+    </section>
+    <script src="index.js"></script>
   </body>
 </html>
