--- a/index.html
+++ b/index.html
@@ -333,21 +333,24 @@
           <!-- BTN Options -->
           <div class="flex mt-12 justify-center">
             <button
-              id="burgersBtn" onclick="burgerBtnClick()"
-              class="border-2 border-blue-200 bg-blue-400 px-8 py-4 text-lg text-white rounded-md mx-2 w-36"
+              id="burgersBtn"
+              onclick="burgerBtnClick()"
+              class="border-2 border-slate-200 bg-blue-400 px-8 py-4 text-lg text-white rounded-md mx-2 w-36"
             >
               Burgers
             </button>
 
             <button
               id="sidesBtn"
+              onclick="sidesBtnClick()"
               class="border-2 border-slate-200 px-8 py-4 text-lg text-blue-400 rounded-md mx-2 w-36"
             >
               Sides
             </button>
 
             <button
-            id="drinkssBtn"
+              id="drinksBtn"
+              onclick="drinksBtnClick()"
               class="border-2 border-slate-200 px-8 py-4 text-lg text-blue-400 rounded-md mx-2 w-36"
             >
               Drinks
@@ -355,7 +358,7 @@
           </div>
 
           <!-- BURGERS LIST -->
-          <div id="burgersList" class="hidden">
+          <div id="burgersList" class="">
             <!-- MENU ITEMS MAIN DIV -->
             <div class="mt-10 max-8xl mx-auto flex flex-wrap justify-center">
               <!-- MENU ITEM Component -->
@@ -572,6 +575,444 @@
             </div>
           </div>
           <!-- BURGERS LIST END-->
+
+          <!-- SIDES LIST -->
+          <div id="sidesList" class="hidden">
+            <!-- MENU ITEMS MAIN DIV -->
+            <div class="mt-10 max-8xl mx-auto flex flex-wrap justify-center">
+              <!-- MENU ITEM Component -->
+
+              <!-- ITEM CARD -->
+              <div
+                class="border-2 border-blue-200 rounded-lg flex items-center p-6 bg-white mb-6 lg:w-5/12 xl:w-5/12 lg:mx-2 xl:w-mx-2"
+              >
+                <!-- CARD IMG -->
+                <img
+                  class="w-36 rounded-lg"
+                  src="https://assets.website-files.com/5e865e09d8efa3d64d76b59d/5e865e09d8efa3676276b5cd_Burger%2003.png"
+                  alt=""
+                />
+                <!-- CARD TEXT DIV -->
+                <div class="pl-6">
+                  <!-- NAME + PRICE -->
+                  <div class="flex justify-between">
+                    <h2 class="text-2xl font-semibold">Sauce Fries</h2>
+                    <p class="text-teal-400">$ 9.20 USD</p>
+                  </div>
+                  <!-- DESCPRTION -->
+                  <div class="text-left text-slate-500 mt-2">
+                    <p>
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry.
+                    </p>
+                  </div>
+                  <!-- QUANTITY + ATC -->
+                  <div class="flex mt-4">
+                    <button
+                      class="bg-blue-400 px-6 py-3 text-md text-white rounded-md"
+                    >
+                      Add To Cart
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <!-- ITEM CARD -->
+              <div
+                class="border-2 border-blue-200 rounded-lg flex items-center p-6 bg-white mb-6 lg:w-5/12 xl:w-5/12 lg:mx-2 xl:w-mx-2"
+              >
+                <!-- CARD IMG -->
+                <img
+                  class="w-36 rounded-lg"
+                  src="https://assets.website-files.com/5e865e09d8efa3d64d76b59d/5e865e09d8efa3b2e676b5b5_Burger%2008.png"
+                  alt=""
+                />
+                <!-- CARD TEXT DIV -->
+                <div class="pl-6">
+                  <!-- NAME + PRICE -->
+                  <div class="flex justify-between">
+                    <h2 class="text-2xl font-semibold">Sauce Fries</h2>
+                    <p class="text-teal-400">$ 9.20 USD</p>
+                  </div>
+                  <!-- DESCPRTION -->
+                  <div class="text-left text-slate-500 mt-2">
+                    <p>
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry.
+                    </p>
+                  </div>
+                  <!-- QUANTITY + ATC -->
+                  <div class="flex mt-4">
+                    <button
+                      class="bg-blue-400 px-6 py-3 text-md text-white rounded-md"
+                    >
+                      Add To Cart
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <!-- ITEM CARD -->
+              <div
+                class="border-2 border-blue-200 rounded-lg flex items-center p-6 bg-white mb-6 lg:w-5/12 xl:w-5/12 lg:mx-2 xl:w-mx-2"
+              >
+                <!-- CARD IMG -->
+                <img
+                  class="w-36 rounded-lg"
+                  src="https://assets.website-files.com/5e865e09d8efa3d64d76b59d/5e865e09d8efa36d8576b5b4_Burger%2004.png"
+                  alt=""
+                />
+                <!-- CARD TEXT DIV -->
+                <div class="pl-6">
+                  <!-- NAME + PRICE -->
+                  <div class="flex justify-between">
+                    <h2 class="text-2xl font-semibold">Sauce Fries</h2>
+                    <p class="text-teal-400">$ 9.20 USD</p>
+                  </div>
+                  <!-- DESCPRTION -->
+                  <div class="text-left text-slate-500 mt-2">
+                    <p>
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry.
+                    </p>
+                  </div>
+                  <!-- QUANTITY + ATC -->
+                  <div class="flex mt-4">
+                    <button
+                      class="bg-blue-400 px-6 py-3 text-md text-white rounded-md"
+                    >
+                      Add To Cart
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <!-- ITEM CARD -->
+              <div
+                class="border-2 border-blue-200 rounded-lg flex items-center p-6 bg-white mb-6 lg:w-5/12 xl:w-5/12 lg:mx-2 xl:w-mx-2"
+              >
+                <!-- CARD IMG -->
+                <img
+                  class="w-36 rounded-lg"
+                  src="https://assets.website-files.com/5e865e09d8efa3d64d76b59d/5e865e09d8efa3676276b5cd_Burger%2003.png"
+                  alt=""
+                />
+                <!-- CARD TEXT DIV -->
+                <div class="pl-6">
+                  <!-- NAME + PRICE -->
+                  <div class="flex justify-between">
+                    <h2 class="text-2xl font-semibold">Sauce Fries</h2>
+                    <p class="text-teal-400">$ 9.20 USD</p>
+                  </div>
+                  <!-- DESCPRTION -->
+                  <div class="text-left text-slate-500 mt-2">
+                    <p>
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry.
+                    </p>
+                  </div>
+                  <!-- QUANTITY + ATC -->
+                  <div class="flex mt-4">
+                    <button
+                      class="bg-blue-400 px-6 py-3 text-md text-white rounded-md"
+                    >
+                      Add To Cart
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <!-- ITEM CARD -->
+              <div
+                class="border-2 border-blue-200 rounded-lg flex items-center p-6 bg-white mb-6 lg:w-5/12 xl:w-5/12 lg:mx-2 xl:w-mx-2"
+              >
+                <!-- CARD IMG -->
+                <img
+                  class="w-36 rounded-lg"
+                  src="https://assets.website-files.com/5e865e09d8efa3d64d76b59d/5e865e09d8efa3b2e676b5b5_Burger%2008.png"
+                  alt=""
+                />
+                <!-- CARD TEXT DIV -->
+                <div class="pl-6">
+                  <!-- NAME + PRICE -->
+                  <div class="flex justify-between">
+                    <h2 class="text-2xl font-semibold">Sauce Fries</h2>
+                    <p class="text-teal-400">$ 9.20 USD</p>
+                  </div>
+                  <!-- DESCPRTION -->
+                  <div class="text-left text-slate-500 mt-2">
+                    <p>
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry.
+                    </p>
+                  </div>
+                  <!-- QUANTITY + ATC -->
+                  <div class="flex mt-4">
+                    <button
+                      class="bg-blue-400 px-6 py-3 text-md text-white rounded-md"
+                    >
+                      Add To Cart
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <!-- ITEM CARD -->
+              <div
+                class="border-2 border-blue-200 rounded-lg flex items-center p-6 bg-white mb-6 lg:w-5/12 xl:w-5/12 lg:mx-2 xl:w-mx-2"
+              >
+                <!-- CARD IMG -->
+                <img
+                  class="w-36 rounded-lg"
+                  src="https://assets.website-files.com/5e865e09d8efa3d64d76b59d/5e865e09d8efa36d8576b5b4_Burger%2004.png"
+                  alt=""
+                />
+                <!-- CARD TEXT DIV -->
+                <div class="pl-6">
+                  <!-- NAME + PRICE -->
+                  <div class="flex justify-between">
+                    <h2 class="text-2xl font-semibold">Sauce Fries</h2>
+                    <p class="text-teal-400">$ 9.20 USD</p>
+                  </div>
+                  <!-- DESCPRTION -->
+                  <div class="text-left text-slate-500 mt-2">
+                    <p>
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry.
+                    </p>
+                  </div>
+                  <!-- QUANTITY + ATC -->
+                  <div class="flex mt-4">
+                    <button
+                      class="bg-blue-400 px-6 py-3 text-md text-white rounded-md"
+                    >
+                      Add To Cart
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- SIDES LIST END-->
+
+          <!-- DRINKS LIST -->
+          <div id="drinksList" class="hidden">
+            <!-- MENU ITEMS MAIN DIV -->
+            <div class="mt-10 max-8xl mx-auto flex flex-wrap justify-center">
+              <!-- MENU ITEM Component -->
+
+              <!-- ITEM CARD -->
+              <div
+                class="border-2 border-blue-200 rounded-lg flex items-center p-6 bg-white mb-6 lg:w-5/12 xl:w-5/12 lg:mx-2 xl:w-mx-2"
+              >
+                <!-- CARD IMG -->
+                <img
+                  class="w-36 rounded-lg"
+                  src="https://assets.website-files.com/5e865e09d8efa3d64d76b59d/5e865e09d8efa3676276b5cd_Burger%2003.png"
+                  alt=""
+                />
+                <!-- CARD TEXT DIV -->
+                <div class="pl-6">
+                  <!-- NAME + PRICE -->
+                  <div class="flex justify-between">
+                    <h2 class="text-2xl font-semibold">Drink</h2>
+                    <p class="text-teal-400">$ 9.20 USD</p>
+                  </div>
+                  <!-- DESCPRTION -->
+                  <div class="text-left text-slate-500 mt-2">
+                    <p>
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry.
+                    </p>
+                  </div>
+                  <!-- QUANTITY + ATC -->
+                  <div class="flex mt-4">
+                    <button
+                      class="bg-blue-400 px-6 py-3 text-md text-white rounded-md"
+                    >
+                      Add To Cart
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <!-- ITEM CARD -->
+              <div
+                class="border-2 border-blue-200 rounded-lg flex items-center p-6 bg-white mb-6 lg:w-5/12 xl:w-5/12 lg:mx-2 xl:w-mx-2"
+              >
+                <!-- CARD IMG -->
+                <img
+                  class="w-36 rounded-lg"
+                  src="https://assets.website-files.com/5e865e09d8efa3d64d76b59d/5e865e09d8efa3b2e676b5b5_Burger%2008.png"
+                  alt=""
+                />
+                <!-- CARD TEXT DIV -->
+                <div class="pl-6">
+                  <!-- NAME + PRICE -->
+                  <div class="flex justify-between">
+                    <h2 class="text-2xl font-semibold">Drink</h2>
+                    <p class="text-teal-400">$ 9.20 USD</p>
+                  </div>
+                  <!-- DESCPRTION -->
+                  <div class="text-left text-slate-500 mt-2">
+                    <p>
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry.
+                    </p>
+                  </div>
+                  <!-- QUANTITY + ATC -->
+                  <div class="flex mt-4">
+                    <button
+                      class="bg-blue-400 px-6 py-3 text-md text-white rounded-md"
+                    >
+                      Add To Cart
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <!-- ITEM CARD -->
+              <div
+                class="border-2 border-blue-200 rounded-lg flex items-center p-6 bg-white mb-6 lg:w-5/12 xl:w-5/12 lg:mx-2 xl:w-mx-2"
+              >
+                <!-- CARD IMG -->
+                <img
+                  class="w-36 rounded-lg"
+                  src="https://assets.website-files.com/5e865e09d8efa3d64d76b59d/5e865e09d8efa36d8576b5b4_Burger%2004.png"
+                  alt=""
+                />
+                <!-- CARD TEXT DIV -->
+                <div class="pl-6">
+                  <!-- NAME + PRICE -->
+                  <div class="flex justify-between">
+                    <h2 class="text-2xl font-semibold">Drink</h2>
+                    <p class="text-teal-400">$ 9.20 USD</p>
+                  </div>
+                  <!-- DESCPRTION -->
+                  <div class="text-left text-slate-500 mt-2">
+                    <p>
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry.
+                    </p>
+                  </div>
+                  <!-- QUANTITY + ATC -->
+                  <div class="flex mt-4">
+                    <button
+                      class="bg-blue-400 px-6 py-3 text-md text-white rounded-md"
+                    >
+                      Add To Cart
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <!-- ITEM CARD -->
+              <div
+                class="border-2 border-blue-200 rounded-lg flex items-center p-6 bg-white mb-6 lg:w-5/12 xl:w-5/12 lg:mx-2 xl:w-mx-2"
+              >
+                <!-- CARD IMG -->
+                <img
+                  class="w-36 rounded-lg"
+                  src="https://assets.website-files.com/5e865e09d8efa3d64d76b59d/5e865e09d8efa3676276b5cd_Burger%2003.png"
+                  alt=""
+                />
+                <!-- CARD TEXT DIV -->
+                <div class="pl-6">
+                  <!-- NAME + PRICE -->
+                  <div class="flex justify-between">
+                    <h2 class="text-2xl font-semibold">Drink</h2>
+                    <p class="text-teal-400">$ 9.20 USD</p>
+                  </div>
+                  <!-- DESCPRTION -->
+                  <div class="text-left text-slate-500 mt-2">
+                    <p>
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry.
+                    </p>
+                  </div>
+                  <!-- QUANTITY + ATC -->
+                  <div class="flex mt-4">
+                    <button
+                      class="bg-blue-400 px-6 py-3 text-md text-white rounded-md"
+                    >
+                      Add To Cart
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <!-- ITEM CARD -->
+              <div
+                class="border-2 border-blue-200 rounded-lg flex items-center p-6 bg-white mb-6 lg:w-5/12 xl:w-5/12 lg:mx-2 xl:w-mx-2"
+              >
+                <!-- CARD IMG -->
+                <img
+                  class="w-36 rounded-lg"
+                  src="https://assets.website-files.com/5e865e09d8efa3d64d76b59d/5e865e09d8efa3b2e676b5b5_Burger%2008.png"
+                  alt=""
+                />
+                <!-- CARD TEXT DIV -->
+                <div class="pl-6">
+                  <!-- NAME + PRICE -->
+                  <div class="flex justify-between">
+                    <h2 class="text-2xl font-semibold">Drink</h2>
+                    <p class="text-teal-400">$ 9.20 USD</p>
+                  </div>
+                  <!-- DESCPRTION -->
+                  <div class="text-left text-slate-500 mt-2">
+                    <p>
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry.
+                    </p>
+                  </div>
+                  <!-- QUANTITY + ATC -->
+                  <div class="flex mt-4">
+                    <button
+                      class="bg-blue-400 px-6 py-3 text-md text-white rounded-md"
+                    >
+                      Add To Cart
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <!-- ITEM CARD -->
+              <div
+                class="border-2 border-blue-200 rounded-lg flex items-center p-6 bg-white mb-6 lg:w-5/12 xl:w-5/12 lg:mx-2 xl:w-mx-2"
+              >
+                <!-- CARD IMG -->
+                <img
+                  class="w-36 rounded-lg"
+                  src="https://assets.website-files.com/5e865e09d8efa3d64d76b59d/5e865e09d8efa36d8576b5b4_Burger%2004.png"
+                  alt=""
+                />
+                <!-- CARD TEXT DIV -->
+                <div class="pl-6">
+                  <!-- NAME + PRICE -->
+                  <div class="flex justify-between">
+                    <h2 class="text-2xl font-semibold">Drink</h2>
+                    <p class="text-teal-400">$ 9.20 USD</p>
+                  </div>
+                  <!-- DESCPRTION -->
+                  <div class="text-left text-slate-500 mt-2">
+                    <p>
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry.
+                    </p>
+                  </div>
+                  <!-- QUANTITY + ATC -->
+                  <div class="flex mt-4">
+                    <button
+                      class="bg-blue-400 px-6 py-3 text-md text-white rounded-md"
+                    >
+                      Add To Cart
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- DRINKS LIST END-->
 
           <!-- FULL MENU BTN -->
           <div class="flex mt-12 justify-center">
